2019-01-07  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Top): Spurious menu header "Remote
	Descriptors" removed.

2019-01-03  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* configure.ac: Bump version to 1.8.
	* NEWS: Likewise.

2018-05-31  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Bash Builtins): Note that some systems
	require the full path to the bash builtin shared object.

2018-03-19  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 1.7.91.
	* NEWS: Likewise.

2018-03-19  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Use the signal-h module to
	guarantee a GNU-like signal.h.

2018-03-18  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* utils/recutl.c (PATH_MAX): handle systems where it is not
	defined such as GNU/Hurd.

2018-03-18  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* src/rec-aggregate.c (REC_AGGREGATE_ACCUM_FUNC): Use %g instead
	of %zd to print the result of aggregate functions.
	* torture/utils/recsel.sh: Adjust expected result.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* bash/readrec.c (readrec_builtin): Immediately return EX_USAGE if
	no_options returns != 0.  Fixes readrec --help.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/recutl.c (recutl_print_version): Update copyright years.
	* bash/readrec.c: Include config.h.
	* bash/Makefile.am (COMMON_CPPFLAGS): Include the builddir lib.
	* src/rec-sex-tab.y: Use new form of %name-prefix.

2018-03-17  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/iconv.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-ld.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-link.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-prefix.m4: Upgrade to gettext-0.19.8.1.
	* m4/progtest.m4: Upgrade to gettext-0.19.8.1.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am (AM_CPPFLAGS): Include the builddir lib.
	* configure.ac: Update version to 1.8.